# n-puzzle

./: .gitignore  CMakeLists.txt
include/: io.h  list.h  node.h  solver.h  state.h
src/: CMakeLists.txt  io.c  list.c  main.c  node.c  solver.c  state.c
test/: CMakeLists.txt  test.c  test1.c  test_list_1.c  test_list_2.c  test_list_3.c  test_list_4.c  test_node_1.c  test_state.c  test_state_1.c  test_state_2.c  test_state_3.c  test_state_4.c
